# korip-backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: .gitmessage.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: custom.md
accounts/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py
categories/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_categorytranslation_subcategorytranslation.py  0003_alter_category_options_and_more.py
categories/tests/: test_api.py  test_create_api.py  test_models.py  test_serializers.py
config/: settings.py  urls.py
deployment/nginx/: korip.conf
exceptions/: custom_exception_handler.py  error_code.py
helper/: email_helper.py  redis_helper.py
places/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
places/migrations/: 0001_initial.py  0002_alter_placetranslation_lang.py  0002_initial.py  0002_remove_place_tour_api_id_place_content_id.py  0003_placeen.py  0003_remove_place_idol_group_remove_place_idol_name_and_more.py  0004_placecn_placejp.py  0004_placetranslation.py  0005_remove_place_opening_hours_remove_place_view_count_and_more.py
places/tests/: test_admin.py  test_models.py  test_place_translation.py
regions/: admin.py  models.py  serializers.py  urls.py  views.py
regions/migrations/: 0001_initial.py  (+3 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+14 files in other folders)
