[tool.poetry]
name = "korip-backend"
version = "0.1.0"
description = ""
authors = ["hi-rice <hi93rice@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.3"
djangorestframework = "^3.16.0"
python-decouple = "^3.8"
django-cors-headers = "^4.7.0"
requests = "^2.32.4"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
